--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="Description" content="This website allows you to select a city and then draws every single road on a screen.">
     <meta name="keywords" content="city roads visualization, roads, graph, visualization, anvaka" />
-    <meta name="author" content="Andrei Kashcha">
+    <meta name="author" content="Vivek .C">
     <title>Draw all roads in a city at once</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
